// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Finished Badge should be rendered if multiple opIndexes 1`] = `
<div
  style={Object {}}
>
  <span>
    <div
      aria-describedby={null}
      className="MuiAvatar-root MuiAvatar-colorDefault"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "backgroundColor": "#9e9e9e",
        }
      }
      title="Mixed Silver"
    >
      M
    </div>
  </span>
  <span>
     Congratulations on getting a new Silver Badge for Level A Mixed Addition / Subtraction!
  </span>
</div>
`;

exports[`Finished Badge should be rendered on happy path 1`] = `
<div
  style={Object {}}
>
  <span>
    <div
      aria-describedby={null}
      className="MuiAvatar-root MuiAvatar-colorDefault"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "backgroundColor": "#9e9e9e",
        }
      }
      title="+ Silver"
    >
      +
    </div>
  </span>
  <span>
     Congratulations on getting a new Silver Badge for Level A Addition!
  </span>
</div>
`;

exports[`Finished Badge should not be rendered if correct answers under 10 1`] = `
<div
  style={Object {}}
>
  You need 10 or more correct answers to earn a badge. On this 
test you got 9 answer(s) correct.
</div>
`;
